open-entities-lib/tests/ui/register_component_standalone.rs
use open_entities::register_component;

register_component!(foo, open_entities::components::Position);
